[package]
name = "plot"
version = "0.2.0"
authors = ["Matt Williams <matt@milliams.com>"]
description = "A command-line plotting and statistics tool"
license = "MIT"
repository = "https://github.com/milliams/plot"
categories = ["command-line-utilities", "visualization"]

[badges]
travis-ci = { repository = "https://github.com/milliams/plot", branch = "master" }

[[bin]]
name = "plot"
doc = false

[workspace]

[dependencies]
clap = "2"
plotlib = "0.1.0"
